# the-true-scotsman

./: .gitignore  AGENTS.md  ANTI_PATTERNS.md  ARCHITECTURE.md  CONTRIBUTING.md  GLOSSARY.md  LICENSE.txt  PROMPTS.md  README.md  SUCCESS_METRICS.md  TUTORIAL.md  skills-config.json
.antigravity/: INSTALL.md
.claude/: INSTALL.md
.codex/: INSTALL.md
.github/: theme-coherence.config.json  theme-coherence.theme.md
apply-behavioral-patterns/: SKILL.md
apply-creational-patterns/: SKILL.md
apply-observability-patterns/: SKILL.md
apply-resilience-patterns/: SKILL.md
apply-security-patterns/: SKILL.md
apply-structural-patterns/: SKILL.md
consumer-test-coverage/: SKILL.md
enterprise-web-app-workflow/: SKILL.md
observability-triage/: SKILL.md
review-protocol/: SKILL.md
scripts/: generate-project-rules.py  generate-project-rules.sh  install.sh  (+2 more)
tools/langchain_clis/: README.md  pyproject.toml
tools/langchain_clis/src/langchain_clis/: __init__.py
tools/langchain_clis/src/langchain_clis/code_review/: __init__.py  cli.py  config.py  protocol.py  report.py  runner.py  validation.py
tools/langchain_clis/src/langchain_clis/feature_ideation/: __init__.py  cli.py  runner.py
tools/langchain_clis/src/langchain_clis/feature_progress/: __init__.py  cli.py  runner.py
tools/langchain_clis/src/langchain_clis/shared/: __init__.py  git_context.py  llm.py  model.py  output_validation.py  repo_text.py  skills.py
tools/langchain_clis/src/langchain_clis/spec_alignment/: __init__.py  cli.py  runner.py
tools/langchain_clis/tests/: test_consumer_flows.py
(+185 files in other folders)
