[project]
name = "langchain-review-cli"
version = "0.2.0"
description = "LangChain CLIs for enterprise-software-playbook workflows (code review, ideation, progress, spec alignment)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.2",
  "langchain-openai>=0.1",
  "pydantic>=2.6",
  "rich>=13.7",
  "typer>=0.12",
]

[project.scripts]
code-review = "langchain_clis.code_review.cli:main"
feature-ideate = "langchain_clis.feature_ideation.cli:main"
feature-progress = "langchain_clis.feature_progress.cli:main"
spec-align = "langchain_clis.spec_alignment.cli:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"
